# wx_template

./: CMakeLists.txt  LICENSE  README.md  copy_to_project.bat  copy_to_project.sh  main.cpp
